--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,27 @@
   --color-brand-red: #CE2B37;
 
   --text-tiny: 0.5rem;
-  --text-tiny--line-height: 0em;
+  --text-tiny--line-height: 0.6rem;
   --text-tiny--letter-spacing: 0rem;
 }
 
 html,
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
+  background-color: white;
+}
+
+@media print {
+  @page {
+    size: A4;
+    margin: 5mm;
+  }
+}
+
+.listino-container {
+  max-width: 210mm;
+  margin: 0 auto;
 }
